# UAgent

./: .gitignore  .prettierignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  prettier.config.mjs  tsconfig.json
apps/desktop/: package.json  (+3 more)
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: asset_mutation.rs  browser.rs  lib.rs  main.rs  mcp.rs  screenshot.rs  terminal.rs  text_mutation.rs  ue_editor.rs  ue_editor_process.rs  watcher.rs
docs/: agent-core-plan.md  architecture.md  development.md  mcp-readonly-plan.md  mvp-roadmap.md  mvp1-acceptance.md  mvp10-acceptance.md  mvp10-manual-smoke.md  mvp10-prep.md  mvp10-risk-register.md  mvp11-acceptance.md  mvp11-baseline-freeze.md  mvp11-final-handoff.md  mvp11-final-verification.md  mvp11-manual-smoke.md  mvp11-prep.md  mvp11-risk-register.md  mvp12-acceptance.md  mvp12-baseline-freeze.md  mvp12-final-handoff.md  mvp12-final-verification.md  mvp12-manual-smoke.md  mvp12-prep.md  mvp12-risk-register.md  mvp13-acceptance.md  mvp13-baseline-freeze.md  mvp13-final-handoff.md  mvp13-final-verification.md  mvp13-manual-smoke.md  mvp13-prep.md  mvp13-risk-register.md  mvp14-acceptance.md  mvp14-final-handoff.md  mvp14-final-verification.md  mvp14-manual-smoke.md  mvp14-prep.md  mvp14-risk-register.md  mvp15-acceptance.md  mvp15-final-handoff.md  mvp15-final-verification.md  (+39 more)
scripts/: mvp15-python-cache-contract.json  mvp15-python-cache-surface.mjs  mvp15-python-cache-surface.test.mjs  side-effect-scan.mjs
(+176 files in other folders)
