[package]
name = "uagent"
version = "0.0.1"
description = "UAgent — AI Agent Host/Client aligned with UE5.8 Unreal MCP Server"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "uagent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "6", features = [] }
sysinfo = { version = "0.30", default-features = false }
ureq = { version = "2", default-features = false }

[features]
custom-protocol = ["tauri/custom-protocol"]
